fix position collapse button

--- a/app/assets/stylesheets/components/_category.scss
+++ b/app/assets/stylesheets/components/_category.scss
@@ -50,6 +50,14 @@
     }
   }
 
+  &__collapse-button-container {
+    display: none;
+
+    &--active {
+      display: block;
+    }
+  }
+
   &__collapse-button {
     display: flex;
     text-decoration: none;
